.env.* 系列文件里的BASE_URL的域名可以自定义

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "qinyang912",
   "license": "MIT",
   "dependencies": {
-    "require-all": "3.0.0",
-    "memory-fs": "0.4.1"
+    "i": "^0.3.6",
+    "memory-fs": "0.4.1",
+    "require-all": "3.0.0"
   }
 }
