--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "qinyang912",
   "license": "MIT",
   "dependencies": {
-    "require-all": "3.0.0",
-    "memory-fs": "0.4.1"
+    "memory-fs": "0.4.1",
+    "require-all": "3.0.0"
   }
 }
