--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "qinyang912",
   "license": "MIT",
   "dependencies": {
-    "memory-fs": "0.4.1",
-    "require-all": "3.0.0"
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "memory-fs": "^0.4.1",
+    "require-all": "^3.0.0",
+    "webpack": "^4.29.2",
+    "webpack-spritesmith": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^5.12.1",
@@ -33,5 +36,10 @@
     "*.vue": [
       "eslint"
     ]
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   }
 }
