--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "memory-fs": "^0.4.1",
     "require-all": "^3.0.0",
-    "webpack": "^4.29.2",
     "webpack-spritesmith": "^1.0.0"
   },
   "devDependencies": {
@@ -22,7 +21,8 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.1"
+    "lint-staged": "^8.1.1",
+    "webpack": "^4.29.2"
   },
   "husky": {
     "hooks": {
