--- a/package.json
+++ b/package.json
@@ -4,12 +4,42 @@
   "description": "vue-cli 3.0 plugin for rishiqing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "fix": "eslint . --fix"
   },
   "author": "qinyang912",
   "license": "MIT",
   "dependencies": {
-    "memory-fs": "0.4.1",
-    "require-all": "3.0.0"
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "memory-fs": "^0.4.1",
+    "require-all": "^3.0.0",
+    "webpack-spritesmith": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.1",
+    "webpack": "^4.29.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint"
+    ],
+    "*.vue": [
+      "eslint"
+    ]
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   }
 }
