--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "author": "qinyang912",
   "license": "MIT",
   "dependencies": {
+    "@rishiqing/webpack-system-register": "^1.6.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "memory-fs": "^0.4.1",
     "require-all": "^3.0.0",
+    "webpack": "^4.29.2",
     "webpack-spritesmith": "^1.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.1",
-    "webpack": "^4.29.2"
+    "lint-staged": "^8.1.1"
   },
   "husky": {
     "hooks": {
