--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-rishiqing",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "vue-cli 3.0 plugin for rishiqing",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,9 @@
   "author": "qinyang912",
   "license": "MIT",
   "dependencies": {
+    "@ant-design/colors": "^3.2.2",
     "@rishiqing/webpack-system-register": "^1.6.1",
+    "hex-rgb": "^4.1.0",
     "memory-fs": "^0.4.1",
     "postcss-custom-properties": "^9.0.2",
     "require-all": "^3.0.0",
