--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/colors": "^3.2.2",
+    "@rishiqing/vue-style-loader": "^4.1.2",
     "@rishiqing/webpack-system-register": "^1.6.1",
     "hex-rgb": "^4.1.0",
     "memory-fs": "^0.4.1",
