--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/colors": "^3.2.2",
-    "@rishiqing/vue-style-loader": "^4.1.2",
+    "@rishiqing/vue-package": "^0.0.2",
+    "@rishiqing/vue-style-loader": "^4.1.3",
     "@rishiqing/webpack-system-register": "^1.6.1",
     "eventemitter3": "4.0.0",
     "hex-rgb": "^4.1.0",
     "memory-fs": "^0.4.1",
+    "null-loader": "^4.0.0",
     "postcss-custom-properties": "^9.0.2",
     "require-all": "^3.0.0",
     "webpack": "^4.29.2",
