--- a/generator/.eslintrc
+++ b/generator/.eslintrc
@@ -1,6 +1,7 @@
 {
   "rules": {
     "import/no-unresolved": "off",
-    "no-empty-function": "off"
+    "no-empty-function": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
