--- a/lib/.eslintrc
+++ b/lib/.eslintrc
@@ -1,7 +1,8 @@
 {
   "rules": {
     "import/no-unresolved": "off",
-    "no-empty-function": "off"
+    "no-empty-function": "off",
+    "import/no-extraneous-dependencies": "off"
   },
   "globals": {
     "__DEV__": true
