--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-rishiqing",
-  "version": "3.0.0-next.9",
+  "version": "3.0.0-next.10",
   "description": "vue-cli 3.0 plugin for rishiqing",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "@rishiqing/vue-package": "0.0.7",
     "@rishiqing/vue-package-external": "0.0.3",
     "@rishiqing/vue-style-loader": "^4.1.3",
-    "@rishiqing/webpack-system-register": "^1.6.1",
+    "@rishiqing/webpack-system-register": "1.6.3",
     "eventemitter3": "4.0.0",
     "hex-rgb": "^4.1.0",
     "memory-fs": "^0.4.1",
